# media-to-md

./: .env.example  .gitignore  README.md  README_zh.md
.github/workflows/: ci.yml
backend/: README.md  config.example.json  pyproject.toml
backend/app/: auth.py  config.py  jobs.py  llm_polish.py  main.py  models.py  opendataloader_pdf_postprocess.py  opendataloader_pdf_runner.py  runtime_progress.py  srt_text.py  storage.py  whisperx_openai_runner.py  whisperx_runner.py
backend/app/api/: routes.py
backend/tests/: VERIFICATION_MATRIX.md  conftest.py  test_api.py  test_api_security_contract.py  test_config.py  test_jobs.py  test_llm_polish.py  test_manifest_storage_contract.py  test_opendataloader_pdf_contract.py  test_opendataloader_pdf_postprocess.py  test_opendataloader_pdf_runner.py  test_opendataloader_pdf_runner_contract.py  test_runner_command_contract.py  test_srt_text.py  test_storage.py  test_whisperx_openai_runner.py  test_whisperx_runner.py
docs/: architecture.md  direct-cli-runners.md  local-setup.md  whisperx-cache-and-diarization.md  whisperx-openai-backend.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: Primitives.tsx  RuntimeProgress.tsx  Shell.tsx
frontend/src/config/: upload.ts
frontend/src/pages/: AdminPage.tsx  WorkbenchPage.tsx
frontend/src/services/: apiBaseUrl.ts  jobs.ts  session.ts  workbenchTasks.ts
frontend/src/styles/: app.css
scripts/: start-dev.sh
(+2 files in other folders)
