[project]
name = "media-to-md-backend"
version = "0.1.0"
description = "Local single-user FastAPI backend for Media-to-MD"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "uvicorn>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
